# semantic-orchestrator

./: .gitignore  EXAMPLES.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  app.py  cli.py  example.py  main.py  pyproject.toml  requirements.txt
semantic_orchestrator/: __init__.py  cli.py  indexer.py
src/semantic_orchestrator/: __init__.py  engine.py  nlq.py  utils.py
