[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-orchestrator"
version = "0.1.0"
description = "A semantic search orchestrator with CLI for ingesting CSV data and querying with natural language"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "André Adeyemi"}
]
dependencies = [
    "click>=8.0.0",
    "pandas>=1.3.0",
    "sentence-transformers>=2.0.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.21.0",
]

[project.scripts]
semantic-orchestrator = "semantic_orchestrator.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
